--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,14 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = "0.11"
-bevy_pancam = "0.9.0"
-
-# Enable a small amount of optimization in debug mode
-[profile.dev]
-opt-level = 1
-
-# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
-[profile.dev.package."*"]
-opt-level = 3
-
+iced = "0.10"
