--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ffmpeg-editor",
+  "name": "alphamath",
   "version": "1.0.0",
-  "description": "Create, view, edit and analyze FFMPEG commands",
+  "description": "math (real)",
   "main": "index.js",
   "scripts": {
     "start": "react-scripts start"
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@mantine/core": "^7.1.2",
     "@mantine/dates": "^7.1.2",
     "@mantine/form": "^7.1.2",
@@ -18,14 +21,14 @@
     "@mantine/notifications": "^7.1.2",
     "@tabler/icons-react": "^2.38.0",
     "dayjs": "^1.11.10",
+    "mantine-contextmenu": "^7.1.12",
     "react": "^18.2.0",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
-    "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-zoom-pan-pinch": "^3.3.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "postcss": "^8.4.31",
     "postcss-preset-mantine": "^1.8.0",
     "postcss-simple-vars": "^7.0.1"
