--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "math (real)",
   "main": "index.js",
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
   "keywords": [],
   "author": "",
