--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@mantine/notifications": "^7.1.2",
     "@tabler/icons-react": "^2.38.0",
     "dayjs": "^1.11.10",
+    "i18next": "^23.7.7",
+    "i18next-browser-languagedetector": "^7.2.0",
     "mantine-contextmenu": "^7.1.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
     "react-scripts": "^5.0.1",
     "react-zoom-pan-pinch": "^3.3.0"
   },
