--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
     "react-scripts": "^5.0.1",
-    "react-zoom-pan-pinch": "^3.3.0"
+    "react-zoom-pan-pinch": "^3.3.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
