--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
+    "react-map-interaction": "^2.1.0",
     "react-scripts": "^5.0.1",
     "react-zoom-pan-pinch": "^3.3.0",
     "uuid": "^9.0.1"
