--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@mantine/modals": "^7.3.0",
     "@mantine/notifications": "^7.3.0",
     "@tabler/icons-react": "^2.38.0",
+    "@types/react": "^18.2.45",
+    "@vitejs/plugin-react": "^4.2.1",
     "dayjs": "^1.11.10",
     "i18next": "^23.7.7",
     "i18next-browser-languagedetector": "^7.2.0",
@@ -34,7 +36,8 @@
     "react-map-interaction": "^2.1.0",
     "react-scripts": "^5.0.1",
     "react-zoom-pan-pinch": "^3.3.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "vite": "^5.0.10"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
