--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@mantine/core": "^7.3.0",
     "@mantine/dates": "^7.3.0",
     "@mantine/form": "^7.3.0",
@@ -25,6 +26,7 @@
     "@mantine/notifications": "^7.3.0",
     "@tabler/icons-react": "^2.38.0",
     "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
     "dayjs": "^1.11.10",
     "i18next": "^23.7.7",
