--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
     "include": [
         "src"
     ],
+    "exclude": ["src/_old"],
     "references": [
         {
             "path": "./tsconfig.node.json"
