--- a/package.json
+++ b/package.json
@@ -10,52 +10,33 @@
     "preview": "vite preview"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "alan404",
+  "license": "GPL-3.0-only",
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@mantine/core": "^7.3.0",
-    "@mantine/dates": "^7.3.0",
-    "@mantine/form": "^7.3.0",
-    "@mantine/hooks": "^7.3.0",
-    "@mantine/modals": "^7.3.0",
-    "@mantine/notifications": "^7.3.0",
-    "@tabler/icons-react": "^2.38.0",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.19",
-    "@vitejs/plugin-react": "^4.2.1",
-    "dayjs": "^1.11.10",
-    "i18next": "^23.7.7",
-    "i18next-browser-languagedetector": "^7.2.0",
-    "mantine-contextmenu": "^7.1.12",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@mantine/core": "^7.11.2",
+    "@mantine/dates": "^7.11.2",
+    "@mantine/form": "^7.11.2",
+    "@mantine/hooks": "^7.11.2",
+    "@mantine/modals": "^7.11.2",
+    "@mantine/notifications": "^7.11.2",
+    "@tabler/icons-react": "^2.47.0",
+    "dayjs": "^1.11.12",
+    "i18next": "^23.12.2",
+    "i18next-browser-languagedetector": "^7.2.1",
+    "mantine-contextmenu": "^7.11.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-i18next": "^13.5.0",
-    "react-map-interaction": "^2.1.0",
-    "react-scripts": "^5.0.1",
-    "react-zoom-pan-pinch": "^3.3.0",
-    "uuid": "^9.0.1",
-    "vite": "^5.0.10"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "postcss": "^8.4.31",
-    "postcss-preset-mantine": "^1.8.0",
-    "postcss-simple-vars": "^7.0.1"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react-swc": "^3.7.0",
+    "vite": "^5.3.5"
   }
 }
