--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^13.5.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "vite-tsconfig-paths": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
