--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,10 @@
         "strict": true,
         "noUnusedLocals": false,
         "noUnusedParameters": false,
-        "noFallthroughCasesInSwitch": false
+        "noFallthroughCasesInSwitch": false,
+        "paths": {
+            "@/*": ["./src/*"]
+        }
     },
     "include": [
         "src"
