--- a/package.json
+++ b/package.json
@@ -14,31 +14,32 @@
   "author": "alan404",
   "license": "GPL-3.0-only",
   "dependencies": {
+    "@alan404/enum": "^0.2.1",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@mantine/core": "^7.11.2",
-    "@mantine/dates": "^7.11.2",
-    "@mantine/form": "^7.11.2",
-    "@mantine/hooks": "^7.11.2",
-    "@mantine/modals": "^7.11.2",
-    "@mantine/notifications": "^7.11.2",
+    "@mantine/core": "^7.12.2",
+    "@mantine/dates": "^7.12.2",
+    "@mantine/form": "^7.12.2",
+    "@mantine/hooks": "^7.12.2",
+    "@mantine/modals": "^7.12.2",
+    "@mantine/notifications": "^7.12.2",
     "@tabler/icons-react": "^2.47.0",
-    "dayjs": "^1.11.12",
-    "i18next": "^23.12.2",
+    "dayjs": "^1.11.13",
+    "i18next": "^23.14.0",
     "i18next-browser-languagedetector": "^7.2.1",
-    "mantine-contextmenu": "^7.11.2",
+    "mantine-contextmenu": "^7.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^13.5.0",
     "uuid": "^9.0.1",
-    "vite-tsconfig-paths": "^5.0.0"
+    "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
-    "vite": "^5.3.5"
+    "vite": "^5.4.2"
   }
 }
