--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mantine/modals": "^7.12.2",
     "@mantine/notifications": "^7.12.2",
     "@tabler/icons-react": "^2.47.0",
+    "brigadier-ts": "^1.4.1",
     "dayjs": "^1.11.13",
     "i18next": "^23.14.0",
     "i18next-browser-languagedetector": "^7.2.1",
@@ -33,6 +34,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^13.5.0",
+    "syntax-parser": "^1.0.18",
     "uuid": "^9.0.1",
     "vite-tsconfig-paths": "^5.0.1"
   },
