--- a/packages/alphamath/public/manifest.json
+++ b/packages/alphamath/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "FFMPEG Editor",
-  "name": "FFMPEG Editor",
+  "short_name": "alphamath",
+  "name": "alphamath",
   "icons": [
     {
       "src": "favicon.ico",
