--- a/packages/alphamath/package.json
+++ b/packages/alphamath/package.json
@@ -15,6 +15,8 @@
   "license": "GPL-3.0-only",
   "dependencies": {
     "@alan404/enum": "^0.2.1",
+    "@alan404/vec2": "workspace:",
+    "@alan404/react-workspace": "workspace:",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
