--- a/packages/vec2/tsconfig.json
+++ b/packages/vec2/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "composite": true,
+    "outDir": "dist",
     "target": "es2016",
     "module": "ESNext",
     "esModuleInterop": true,
