--- a/packages/react-workspace/package.json
+++ b/packages/react-workspace/package.json
@@ -14,7 +14,8 @@
 		"/dist"
 	],
 	"scripts": {
-		"build": "tsc"
+		"build": "tsc",
+		"prepublish": "tsc"
 	},
 	"devDependencies": {
 		"@types/react": "^18.3.12",
