--- a/apps/alphamath/package.json
+++ b/apps/alphamath/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alphamath",
+  "name": "@repo/alphamath",
   "version": "1.0.0",
   "description": "math (real)",
   "main": "index.js",
@@ -43,6 +43,8 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "@repo/typescript-config": "workspace:*",
+    "typescript": "latest"
   }
 }
