--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-    "name": "alphamath-monorepo",
-    "version": "1.0.0",
     "private": true,
-    "workspaces": [
-        "packages/*"
-    ]
+    "scripts": {
+        "build": "turbo run build",
+        "dev": "turbo run dev",
+        "lint": "turbo run lint"
+    },
+    "devDependencies": {
+        "turbo": "latest"
+    },
+    "packageManager": "pnpm@9.0.0"
 }
