--- a/packages/react-workspace/package.json
+++ b/packages/react-workspace/package.json
@@ -19,11 +19,12 @@
 	"devDependencies": {
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
-		"typescript": "^5.6.2"
+		"@repo/typescript-config": "workspace:*",
+		"typescript": "latest"
 	},
 	"dependencies": {
 		"@mantine/hooks": "^7.13.4",
 		"react": "^18.3.1",
-		"@alan404/vec2": "workspace:"
+		"@alan404/vec2": "workspace:*"
 	}
 }
