--- a/packages/vec2/package.json
+++ b/packages/vec2/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.5",
   "description": "`{ x, y }` type and utilities for working with them",
   "repository": "https://github.com/TheAlan404/alphamath/tree/main/packages/vec2",
-	"type": "module",
+  "type": "module",
   "files": [
     "/dist"
   ],
@@ -18,6 +18,7 @@
   "keywords": [],
   "author": "alan404",
   "devDependencies": {
+    "@repo/typescript-config": "workspace:*",
     "typescript": "^5.6.3"
   }
 }
