--- a/packages/vec2/tsconfig.json
+++ b/packages/vec2/tsconfig.json
@@ -1,12 +1,9 @@
 {
-  "compilerOptions": {
-    "composite": true,
-    "outDir": "dist",
-    "target": "es2016",
-    "module": "ESNext",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true
-  }
+	"extends": "@repo/typescript-config/base.json",
+	"compilerOptions": {
+		"outDir": "dist"
+	},
+	"include": [
+		"src"
+	]
 }
