--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/alphamath",
+  "name": "@repo/web",
   "version": "1.0.0",
   "description": "math (real)",
   "main": "index.js",
