--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,8 +15,8 @@
   "license": "GPL-3.0-only",
   "dependencies": {
     "@alan404/enum": "^0.2.1",
-    "@alan404/vec2": "workspace:",
-    "@alan404/react-workspace": "workspace:",
+    "@alan404/react-workspace": "workspace:*",
+    "@alan404/vec2": "workspace:*",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
@@ -40,11 +40,12 @@
     "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
+    "@repo/typescript-config": "workspace:*",
+    "@types/node": "^24.0.7",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
-    "vite": "^5.4.2",
-    "@repo/typescript-config": "workspace:*",
-    "typescript": "latest"
+    "typescript": "latest",
+    "vite": "^5.4.2"
   }
 }
