--- a/packages/react-workspace/package.json
+++ b/packages/react-workspace/package.json
@@ -4,6 +4,9 @@
 	"author": "alan404",
 	"repository": "https://github.com/TheAlan404/alphamath/tree/main/packages/react-workspace",
 	"description": "Infinitely pannable, accessible map-like workspace for React",
+	"exports": {
+		".": "./src/index.ts"
+	},
 	"publishConfig": {
 		"main": "dist/src/index.js",
 		"types": "dist/src/index.d.ts"
