--- a/packages/vec2/package.json
+++ b/packages/vec2/package.json
@@ -7,6 +7,9 @@
   "files": [
     "/dist"
   ],
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "publishConfig": {
     "main": "dist/src/index.js",
     "types": "dist/src/index.d.ts"
