--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@alan404/enum": "^0.2.1",
     "@alan404/react-workspace": "workspace:*",
     "@alan404/vec2": "workspace:*",
+    "@cortex-js/compute-engine": "^0.30.2",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
