--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "devDependencies": {
         "turbo": "latest"
     },
-    "packageManager": "pnpm@9.0.0"
+    "packageManager": "pnpm@9.0.0",
+    "dependencies": {
+        "typescript": "^5.8.3"
+    }
 }
